<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/bmi_IMG"
        android:layout_width="128dp"
        android:layout_height="128dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.10"
        app:layout_constraintHorizontal_bias="0.5"
        app:srcCompat="@drawable/weighingscale"
        android:contentDescription="@string/todo" />

    <!-- Gender -->
    <RadioGroup
        android:id="@+id/gender_RG"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35">

        <RadioButton
            android:id="@+id/male_Btn"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/male"
            android:theme="@style/MaleRadioButtonStyle" />

        <RadioButton
            android:id="@+id/female_Btn"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/female"
            android:theme="@style/FemaleRadioButtonStyle" />
    </RadioGroup>

    <!-- Age -->
    <EditText
        android:id="@+id/age_ET"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/age"
        android:theme="@style/CustomEditTextStyle"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"
        android:autofillHints="" />

    <!-- Height EditText -->
    <EditText
        android:id="@+id/height_ET"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/height"
        android:theme="@style/CustomEditTextStyle"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55"
        android:autofillHints=""
        />

    <!-- Centimeter -->
    <TextView
        android:id="@+id/cm_TV"
        android:layout_width="wrap_content"
        android:layout_height="25dip"
        android:text="@string/cm"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" />

    <!-- Weight -->
    <EditText
        android:id="@+id/weight_ET"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/weight"
        android:theme="@style/CustomEditTextStyle"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.65"
        android:autofillHints="" />

    <!-- Kg -->
    <TextView
        android:id="@+id/kg_TV"
        android:layout_width="wrap_content"
        android:layout_height="25dip"
        android:text="@string/kg"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <Button
        android:id="@+id/showResult"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/button"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.80" />

</androidx.constraintlayout.widget.ConstraintLayout>